[tool.poetry]
name = "mkdocs-poetry"
version = "0.1.0"
description = ""
authors = ["infocornouaille <couronne.david@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
